edited template with personal info

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I''m Joshua Tracy', <span> linux, infrastructure, and cloud enthusiast </a></span>,
+            <p> Hi, I''m Joshua Tracy', <span> linux, infrastructure, and kubernetes enthusiast </a></span>,
                and <span><a href="https://www.youtube.com/c/TheSudo">YouTuber</a></span> focused on creating solutions and automating solutions. 
                
          </br>
@@ -120,8 +120,8 @@
 
                <div class="twelve columns">
 
-                  <h3>AWS Certified Developer Associate</h3>
-                  <p class="info"><em class="date">March 2018</em></p>
+                  <h3>Certified Kubernetes Administrator (CKA)</h3>
+                  <p class="info"><em class="date">July 2021</em></p>
 
                </div>
 
@@ -131,8 +131,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Azure Fundamentals AZ900</h3>
-                  <p class="info"><em class="date">July 2020</em></p>
+                  <h3>AWS Certified Solutions Architect Associate</h3>
+                  <p class="info"><em class="date">May 2019</em></p>
 
                </div>
 
@@ -142,8 +142,19 @@
 
                <div class="twelve columns">
 
-                  <h3>LPI Linux Essentials</h3>
-                  <p class="info"><em class="date">February 2021</em></p>
+                  <h3>AWS Certified SysOps Administrator Associate</h3>
+                  <p class="info"><em class="date">April 2020</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Red Hat Certified Systems Administrator (RHCSA)</h3>
+                  <p class="info"><em class="date">August 2020</em></p>
 
                </div>
 
@@ -168,11 +179,11 @@
 
                <div class="twelve columns">
 
-                  <h3>A Cloud Guru</h3>
-                  <p class="info">Associate Community Training Architect <span>&bull;</span> <em class="date">November 2020 - Present</em></p>
+                  <h3>Spathe Systems</h3>
+                  <p class="info">Cloud Infrastructure Team Lead <span>&bull;</span> <em class="date">September 2021 - Present</em></p>
 
                   <p>
-                  <li>Creating awesome cloud computing content.</li> 
+                  <li>I lead a team of dedicated Cloud Engineers. We work with customers and their DevSecOps teams to ensure their requirments are met in a secure manner. </li> 
                   </p>
 
                </div>
@@ -183,13 +194,15 @@
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">May 2019 - August 2020</em></p>
+                  <h3>Raytheon Technologies</h3>
+                  <p class="info">Sr. Linux Systems Administrator <span>&bull;</span> <em class="date">August 2020 - September 2021</em></p>
 
                   <p>
-                     <li>Developed cloud native solutions in Azure</li>
-                     <li>CI/CD with Azure DevOps</li>
-                     <li>Full stack .NET development</li>
+                     <li>Infrastructure As Code (IaC) and GitOps Implementations</li>
+                     <li>Automate infrastructure upgrade and configuration processes using Ansible, Red Hat Satellite, and Terraform</li>
+                     <li>Work alongside developers and engineers to produce and maintain robust CI/CD pipelines</li>
+                     <li>Deploying kubernetes clusters and application migrations from VM based architecture to K8s based architecture.</li>
+                     <li>Implement and maintain robust monitoring and alerting using Grafana and InfluxDB</li>
                   </p>
 
                </div>
@@ -200,14 +213,14 @@
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
+                  <h3>Atlantic Digital</h3>
+                  <p class="info">Cloud Systems Engineer <span>&bull;</span> <em class="date">September 2019 - August 2020</em></p>
 
                   <p>
-                  <li>Atlassian suite administration</li>
-                  <li>O365 suite administration</li>
-                  <li>SQL server 2019 administration</li>
-                  <li>Azure infrastructure administration</li>
+                  <li>Part of a team responsible for building a PaaS dedicated to DevSecOps practices.</li>
+                  <li>Work with customers utilizing the platform to manage their requests.</li>
+                  <li>Ensure cloud infrastructure follows IaC best practices to create declarative infrastructure than can be created and destroyed in a reaptable fashion.</li>
+                  <li>AWS infrastructure administration</li>
                   </p>
 
                </div>
@@ -218,11 +231,13 @@
 
                <div class="twelve columns">
 
-                  <h3>Tech Boston</h3>
-                  <p class="info">Help Desk Analyst <span>&bull;</span> <em class="date">October 2016 - August 2018</em></p>
+                  <h3>Atlantic Digital</h3>
+                  <p class="info">Enterprise Network Administrator <span>&bull;</span> <em class="date">September 2018 - October 2019</em></p>
 
                   <p>
-                  <li>Front line help desk IT support</li>
+                  <li>Create network device configurations for new remote locations based on specifications.</li>
+                  <li>Assist enterprise and remote locations with networking related issues on Cisco devices.</li>
+                  <li>Troubleshoot DMVPN, routing (EIGRP), DHCP, and ACL issues.</li>
                   </p>
 
                </div>
@@ -233,12 +248,12 @@
 
                <div class="twelve columns">
 
-                  <h3>Apple Danbury</h3>
-                  <p class="info">Mobile tech <span>&bull;</span> <em class="date">December 2014 - August 2016</em></p>
+                  <h3>Quiet Professionals</h3>
+                  <p class="info">IT Helpdesk <span>&bull;</span> <em class="date">December 2014 - August 2016</em></p>
 
                   <p>
-                  <li>Repaired software and hardware issues related to iOS devices</li>
-                  
+                  <li>Support the enterprise via troubleshooting tier 1 issues with employees and routing tickets based on function.</li>
+                  <li>Create new user accounts for the enterprise.</li>
                   </p>
 
                </div>
@@ -264,12 +279,9 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="https://twitter.com/madebygps"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://linkedin.com/in/gwyneth-pena"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li>
-               <li><a href="https://instagram.com/madebygps"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://youtube.com/madebygps"><i class="fa fa-youtube"></i></a></li>
-               <li><a href="https://github.com/madebygps/cgc-azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/joshua-tracy/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.youtube.com/c/TheSudo"><i class="fa fa-youtube"></i></a></li>
+               <li><a href="https://github.com/Josh-Tracy/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
 
             <ul class="copyright">
